added create_release script updated all.sh and Makefile for release build

--- a/gcc/Makefile
+++ b/gcc/Makefile
@@ -177,7 +177,8 @@ $(info C_SOURCE_FILES = [${C_SOURCE_FILES}])
 $(info CFLAGS = [${CFLAGS}])
 
 # OBJECT_DIRECTORY = _build
-OBJECT_DIRECTORY = $(BLUENET_BUILD_DIR)/bootloader
+# OBJECT_DIRECTORY = $(BLUENET_BUILD_DIR)/bootloader
+OBJECT_DIRECTORY = $(BLUENET_BUILD_DIR)
 LISTING_DIRECTORY = $(OBJECT_DIRECTORY)
 OUTPUT_BINARY_DIRECTORY = $(OBJECT_DIRECTORY)
 
