Added default hardware board. Moved UICR layout to config.

--- a/gcc/Makefile
+++ b/gcc/Makefile
@@ -41,6 +41,10 @@ CFLAGS += -DSOFTDEVICE_MINOR=$(SOFTDEVICE_MINOR)
 CFLAGS += -DAPPLICATION_START_ADDRESS=$(APPLICATION_START_ADDRESS)
 CFLAGS += -DBOOTLOADER_START_ADDRESS=$(BOOTLOADER_START_ADDRESS)
 CFLAGS += -DSERIAL_VERBOSITY=$(SERIAL_VERBOSITY)
+CFLAGS += -DDEFAULT_HARDWARE_BOARD=$(DEFAULT_HARDWARE_BOARD)
+CFLAGS += -DUICR_DFU_INDEX=$(UICR_DFU_INDEX)
+CFLAGS += -DUICR_BOARD_INDEX=$(UICR_BOARD_INDEX)
+#CFLAGS += -DHARDWARE_BOARD_ADDRESS=$(HARDWARE_BOARD_ADDRESS)
 
 ifdef DEVICE_TYPE
 CFLAGS += -DDEVICE_TYPE=$(DEVICE_TYPE)
