Fixed getting bootloader version from config.

--- a/gcc/Makefile
+++ b/gcc/Makefile
@@ -44,7 +44,7 @@ CFLAGS += -DSERIAL_VERBOSITY=$(SERIAL_VERBOSITY)
 CFLAGS += -DDEFAULT_HARDWARE_BOARD=$(DEFAULT_HARDWARE_BOARD)
 CFLAGS += -DUICR_DFU_INDEX=$(UICR_DFU_INDEX)
 CFLAGS += -DUICR_BOARD_INDEX=$(UICR_BOARD_INDEX)
-CFLAGS += -DBOOTLOADER_VERSION=$(BOOTLOADER_VERSION)
+CFLAGS += -DBOOTLOADER_VERSION="\"$(BOOTLOADER_VERSION)\""
 #CFLAGS += -DHARDWARE_BOARD_ADDRESS=$(HARDWARE_BOARD_ADDRESS)
 
 ifdef DEVICE_TYPE
